# Lattice

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  LICENSE-COMMERCIAL  Makefile  README.md  build.rs  deny.toml
.config/: nextest.toml
.githooks/: commit-msg
.github/actions/lattice/: action.yml
.github/workflows/: ci.yml  release.yml  soak.yml
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/: .gitignore
fuzz/corpus/fuzz_edits/: bare_cr_zwsp.txt  crlf_bom.txt  delete_link.txt  footnote.txt  frontmatter_yaml.txt  mixed_endings.txt  multi_edit.txt  open_fence.txt  refdef.txt  setext.txt  strikethrough_escaped_tilde.txt
fuzz/corpus/fuzz_full/: bom_yaml.md  carrier_details.md  carrier_exceptions.md  carrier_multibyte.md  carrier_naked.md  carrier_unterminated_quote.md  json_doc.md  mixed_endings.md  soak-028ea846f05b  soak-1cd68586c7fa  soak-2245b0ba3467  soak-4043a02e1ee7  soak-54626b031d31  soak-54b95e881fc4  soak-58ed4ceb4712  soak-6373579d6d2b  soak-9dabe543af31  soak-beb5b59f5ed4  soak-cf51f164ce52  soak-cfb2eb123818  soak-da5cb3c0f04d  soak-dce6e2ebf27d  soak-dd60e967d2bd  soak-ec25a7e9e47c  toml_doc.md  yaml_doc.cr.md  yaml_doc.crlf.md  yaml_doc.md
fuzz/corpus/fuzz_inlines/: bom_multibyte.md  emphasis.md  inline_element_id.md  inlines.cr.md  inlines.crlf.md  inlines.md  link_title_continuation_line.md  list_multibyte_ws.md  multibyte.md
fuzz/corpus/fuzz_json/: eof_diag_overshoot.json  multibyte.json  nested.cr.json  nested.crlf.json  nested.json
fuzz/corpus/fuzz_parse_tree/: bom_multibyte.md  email_autolink.md  kitchen_sink.cr.md  kitchen_sink.crlf.md  kitchen_sink.md  list_multibyte_ws.md  list_nested_block.md  path_shaped_md_bases_shapes.md  path_shaped_md_fragment.md  table_cell_backticked_path.md  table_double_backtick_longer_run.md
fuzz/corpus/fuzz_structural/: carrier_expected_colon_multibyte.md  close_tag_trailing_multibyte.md  dark_matter_paths.md  exceptions_frontmatter.md  headings_html_fences.md  metadata_carrier.md  quoted_paths_apostrophe.md
fuzz/corpus/fuzz_tokenize_tag/: anchor_target.txt  comment.txt  element_id.txt  malformed.txt  open_attrs.txt  self_close_mb.txt
fuzz/corpus/fuzz_toml/: multibyte.toml  tables.cr.toml  tables.crlf.toml  tables.toml
fuzz/corpus/fuzz_yaml/: multibyte.yaml  nested.cr.yaml  nested.crlf.yaml  nested.yaml  single_quote_escape.yaml
fuzz/fuzz_targets/: fuzz_edits.rs  fuzz_full.rs  fuzz_inlines.rs  fuzz_json.rs  fuzz_parse_tree.rs  fuzz_structural.rs  fuzz_tokenize_tag.rs  fuzz_toml.rs  fuzz_yaml.rs
proptest-regressions/: property_tests.txt
src/: block.rs  cli.rs  commonmark_spec_tests.rs  completion.rs  config.rs  encoding_tests.rs  fm.rs  format.rs  frontmatter.rs  fuzz_api.rs  html.rs  inline.rs  invariants.rs  json.rs  lib.rs  limits.rs  line_index.rs  lint.rs  lsp.rs  main.rs  markdown.rs  metadata.rs  mv.rs  overrides.rs  property_tests.rs  server.rs  span.rs  structural.rs  toml.rs  validation.rs  workspace.rs  yaml.rs
tests/: lsp_wire.rs
