[package]
name = "lattice"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "A markdown predicate linter and backlink reconciler, shipped as an LSP server."
repository = "https://github.com/TwoWells/Lattice"
keywords = ["markdown", "lsp", "linter", "backlinks", "commonmark"]
categories = ["development-tools", "command-line-utilities"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Hard denials — no agent should produce these
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
missing_assert_message = "deny"

# Force agents to justify exceptions
allow_attributes_without_reason = "deny"

# Dependencies
multiple_crate_versions = "allow"

# Nursery false positives
missing_const_for_fn = "allow"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[features]
# Exposes `lattice::fuzz_api` and `lattice::invariants` so the out-of-crate
# `cargo-fuzz` targets (under `fuzz/`) can link the parsers and assert the same
# invariants as the property suite. Off by default — the normal build and
# `make check` never enable it, keeping the public surface to `lattice::run`.
fuzzing = []

[dependencies]
anyhow = "1"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
ignore = "0.4"
lsp-server = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
cpu-time = "1"
proptest = "1"
tempfile = "3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
